Closed Bug 974314 Opened 10 years ago Closed 10 years ago

memleak in CreateDrawTargetForData with skia

Categories

(Core :: Graphics, defect)

28 Branch
x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30

People

(Reporter: ali, Assigned: ali)

References

Details

Attachments

(1 file)

When you ask for a draw target for data from the gfx Factory, and skia is enabled, a skia drawtarget is created, ignored, and (on a mac) a cg target is then created and returned.
Blocks: 973892
No longer blocks: 973892
Keywords: checkin-needed
Blocks: 973892
https://hg.mozilla.org/mozilla-central/rev/3a5b5ba79aeb
Status: UNCONFIRMED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: