Bug 974314 - Fix memleak in CreateDrawTargetForData when backend is skia. r=gal