gfx/2d/Factory.cpp
@@ -338,6 +338,7 @@ Factory::CreateDrawTargetForData(BackendType aBackend,
       newTarget = new DrawTargetSkia();
       newTarget->Init(aData, aSize, aStride, aFormat);
       retVal = newTarget;
+      break;
     }
 #endif
 #ifdef XP_MACOSX
